[package]
name = "warpdir"
version = "0.1.1"
authors = ["jason <jason@zzq.org>"]
description = "Provides shortcuts for cd under the wd alias. This is a cross-shell/cross-platform drop in replacement the zsh plugin by mfaerevaag."
edition = "2018"

[dependencies]
dirs = "~2.0.0"
log = "~0.4.0"
stderrlog = "~0.4.0"

[dependencies.clap]
version = "~2.33.0"
default-features = false